--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,9 @@
   "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
-    "firebase-admin": "^12.1.1",
-    "firebase-functions": "^6.3.2"
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.3.2",
+    "puppeteer": "^24.11.2"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
