--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.8",
     "xlsx": "^0.18.5"
