--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "@tailwindcss/vite": "^4.1.8",
+    "chart.js": "^4.5.0",
     "csv-parser": "^3.2.0",
     "firebase": "^11.9.1",
     "firebase-admin": "^13.4.0",
@@ -19,10 +20,13 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.6.2",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.8",
     "xlsx": "^0.18.5"
   },
