ajustes de pagina de eventos

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "functions": {
-    "source": "functions"
+    "source": "functions",
+    "region": "us-central1"
   },
   "hosting": {
     "public": "dist",
