--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.514.0",
+    "qrcode.js": "^0.0.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
